Attempt to repair dependencies

--- a/LibraryTest/LibraryTest.csproj
+++ b/LibraryTest/LibraryTest.csproj
@@ -11,13 +11,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Library\Library.csproj" />
+    <ProjectReference Include="..\Library.csproj" />
   </ItemGroup>
 
 </Project>
