--- a/LibraryTest/LibraryTest.csproj
+++ b/LibraryTest/LibraryTest.csproj
@@ -11,12 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Library.csproj" />
+    <ProjectReference Include="..\LibraryApp\Library.csproj" />
   </ItemGroup>
 
 </Project>
